--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "file-loader": "^1.1.11",
     "file-saver": "^1.3.8",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "jszip": "^3.1.5",
     "lodash": "^4.17.5",
     "ngl": "2.0.0-dev.32",
